@@ -205,6 +205,8 @@
 		<SEQ TYPE="MARKUP">/</SEQ>
 		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="OPERATOR">:</MARK_FOLLOWING>
 		<SEQ TYPE="OPERATOR">:</SEQ>
+		
+		<IMPORT DELEGATE="html::TAGS"/>
 	</RULES>
 
 
